--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@reach/router": "^1.3.4",
     "axios": "^1.2.0",
+    "buffer": "^6.0.3",
     "framer-motion": "^7.6.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
