--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.0",
     "buffer": "^6.0.3",
     "framer-motion": "^7.6.19",
+    "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
